--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <p style="margin: auto;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam in nesciunt officia beatae, sed quasi, illo incidunt adipisci deleniti quisquam dignissimos! Pariatur id possimus animi ex, illo doloremque architecto dolorum?</p>
         <p>Este texto esta dentro de un div</p>
     </div>
+<div> <span>Esto es un spam</span>
+</div>
+   
 
-    <span>Esto es un span</span>
-
-    
+    <img src="image/CANGO5ZGTBCLHBXYZMGO5QYLRA.avif" alt="">
+    <h1>messi la cabra</h1>
 </body>
 </html>
